hack/deploy/controlplane/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: multicluster-controlplane
  labels:
    app: multicluster-controlplane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multicluster-controlplane
  template:
    metadata:
      labels:
        app: multicluster-controlplane
    spec:
      containers:
      - name: controlplane
        image: quay.io/open-cluster-management/multicluster-controlplane
        imagePullPolicy: IfNotPresent
        args:
          - "/multicluster-controlplane"
          - "--authorization-mode=RBAC"
          - "--enable-bootstrap-token-auth"
          - "--service-account-key-file=/controlplane/cert/kube-serviceaccount.key"
          - "--client-ca-file=/controlplane/cert/client-ca.crt"
          - "--client-key-file=/controlplane/cert/client-ca.key"
          - "--enable-bootstrap-token-auth"
          - "--enable-priority-and-fairness=false"
          - "--api-audiences="    
          - "--storage-backend=etcd3"
          - "--v=1"
          - "--service-account-lookup=false"
          - "--service-account-signing-key-file=/controlplane/cert/kube-serviceaccount.key"
          - "--service-account-private-key-file=/controlplane/cert/kube-serviceaccount.key"
          - "--enable-admission-plugins=NamespaceLifecycle,ServiceAccount,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ManagedClusterMutating,ManagedClusterValidating,ManagedClusterSetBindingValidating"
          - "--bind-address=0.0.0.0"
          - "--secure-port=9443"
          - "--tls-cert-file=/controlplane/cert/serving-kube-apiserver.crt"
          - "--tls-private-key-file=/controlplane/cert/serving-kube-apiserver.key"
          - "--feature-gates=DefaultClusterSet=true,OpenAPIV3=false"
          - "--enable-embedded-etcd=true"
          - "--etcd-servers=https://127.0.0.1:2379"
          - "--service-cluster-ip-range=10.0.0.0/24"
          - "--service-account-issuer=https://kubernetes.default.svc"
          - "--external-hostname=API_HOST"
          - "--profiling=false"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          runAsNonRoot: true
        volumeMounts:
        - name: controlplane-cert
          mountPath: /controlplane/cert
          readOnly: true
        - mountPath: /.ocmconfig
          name: ocmconfig 
      volumes:
      - name: controlplane-cert
        secret:
          secretName: controlplane-cert
      - name: ocmconfig 
        persistentVolumeClaim:
          claimName: multicluster-controlplane-pvc-volume
